Positioning popovers to not get overlapped by the footer. [Fixes #70704630]

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -205,6 +205,9 @@ th {
     .font-icon {
       font-size: 14px;
     }
+    > li {
+      position: relative;
+    }
   }
   a.name {
     margin: 0;
